--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "node_modules/.bin/mocha index.spec.js",
-    "start": "node index.js"
+    "test": "NODE_ENV=test mocha api/user/user.spec.js",
+    "start": "node ./bin/www.js"
   },
   "author": "",
   "license": "ISC",
@@ -13,7 +13,9 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.2.1",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "sequelize": "^4.38.0",
+    "sqlite3": "^4.0.1"
   },
   "devDependencies": {
     "mocha": "^5.2.0",
